# opencv_project

./: CMakeLists.txt  README.md
src/: main.cpp
src/1.0/: main_1.cpp
